# braunchem

./: .db-paths.sty  .gitignore  1I-4Da_svg-tex.pdf_tex  README.md  TODO.md  braunchem.code-workspace  generate_db.py  requirements.txt  setup.cfg  texte.tex
archive/: arsenal.json
braunchem/: constants.py  convert.py  data.py  latex.py  main.py  problem.py  quantities.py  topic.py
braunchem/latex/: braun.cls  braunfigure.cls
braunchem/utils/: titrations.py
braunchem/v2-test/: constants.py  latex.py  problem2.py
class/: braundb.sty  braunpage.sty
class/database/: thermochemical.csv
data/: areas.json  arsenal.json
data/focuses/: focuses.json
data/presentations/: presentations.json
data/problems/: problems.json
data/quantities/: bases.csv  conductivities.csv  inorganic.csv  organic.csv  parameters.json  quantities.json
data/topics/: topic.json  topics.json
database/: .db-paths.sty  arsenal.json  arsenal.p  problems.json  problems.tex
database/1A/: 1A.md
latex/: braun.cls  braunchem.sty  braunfig.cls  braunfigure.cls
scripts/: arsenal.json  convert.py  data.py  dome.py  latex.py  main.py  problem.py  sampaio.py  simulado.py  topic.py
src/: constants.py  convert.py  data.py  latex.py  main.py  problem.py  projeto_probest.ipynb  sampaio.py  simulados.json  topic.py
template/: 2A.tex  braun.cls  braunfig.sty  generate_db.py
test/: problem2.py  save.md  test.lua  test.md  test.py  test_problem.html  test_problem.json  test_problem.tex
tests/: qty-test.py  test-problem.md  test.py  topic-test.md  topic_tests.py
texmf/: ls-R
(+2622 files in other folders)
