[metadata]
name = braunchem
description = Chemistry problem sets
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    braunchem
install_requires =
    attr>=0.3
    beautifulsoup4>=4
    black>=22
    bs4>=0.0.1
    click>=8
    frontmatter>=3
    Markdown>=3
    mypy-extensions>=0.4
    pathspec>=0.10
    platformdirs>=2.5
    pypandoc>=1.8
    PyYAML>=5
    soupsieve>=2
    tomli>=2
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
