[metadata]
name = braunchem
description = Chemistry problem sets
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    braunchem
install_requires =
    pydantic>=1.10
    beautifulsoup4>=4
    black>=22
    bs4>=0.0.1
    python-frontmatter>=1
    pypandoc>=1.8
    panflute>=2.2.3
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
